--- a/index.html
+++ b/index.html
@@ -36,23 +36,23 @@
                   <button class="lead__button" >View our menu</button>
                </div>
             </section>
-         <section class="product">
-            <div class="product__container">
-               <ul class="product__left-group">
-                  <li class="product__features">
+            <section class="product">
+               <div class="product__container">
+                  <ul class="product__left-group">
+                     <li class="product__features">
                      <div class="product__info">
                         <h6 class="product__heading">Indoor Seating</h6>
                         <p class="product__description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                      </div>
                      <img class="product__icon" src="./images/product__icon1.svg">
-                  </li>
-                  <li class="product__features">
-                     <div class="product__info">
+                     </li>
+                     <li class="product__features">
+                        <div class="product__info">
                         <h6 class="product__heading">Pet Friendly</h6>
                         <p class="product__description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-                     </div>
+                        </div>
                      <img class="product__icon" src="./images/product__icon2.svg">
-                  </li>
+                     </li>
                   <li class="product__features">
                      <div class="product__info">
                         <h6 class="product__heading">Take Away</h6>
@@ -85,9 +85,9 @@
                   </li>
                </ul>
             </div>
-         </section>
-         <section class="booking">
-            <div class="booking__container">
+            </section>
+            <section class="booking">
+               <div class="booking__container">
                <div class="booking__info margin">
                   <h2 class="booking__heading">Looking for a fresh coffee?</h2>
                   <div class="booking__underline"></div>
@@ -95,8 +95,201 @@
                   <p class="booking__text">Fleet Street,  Chancery Lane or Milkwood Road!</p>
                   <button class="booking__button">Book&nbsp;a&nbsp;table</button>
                </div>
-            </div>
-         </section>
+               </div>
+            </section>
+            <section class="menu">
+               <div class="menu__container margin">
+                  <div class="menu__info">
+                     <h2 class="menu__heading">Explore our menu</h2>
+                     <div class="menu__underline"></div>
+                     <p class="menu__text">Available all day! We can not guarantee our foods are allergen-</p>
+                     <p class="menu__text">free. Service charge not included.</p>
+                     <div class="menu__sections">
+                     <a class="menu__link">food</a>
+                     <a class="menu__link">drinks</a>
+                     </div>
+                  </div>
+                  <div class="menu__list-container">
+                     <ul class="menu__list">
+                        <li class="menu__item">
+                           <img class="menu__item-photo" src="./images/menu__item1.jpg">
+                           <div class="menu__paragraph">
+                              <h6 class="menu__item-name">Prufrock Breakfast Bun</h6>
+                              <p class="menu__item-presenting">
+                                 Brioche bun, with bacon, scrambled egg, melty cheese and mustard
+                              </p>
+                           </div>
+                              <p class="menu__item-price">
+                                 $8
+                              </p>
+                        </li>
+                        <li class="menu__item">
+                           <img class="menu__item-photo" src="./images/menu__item2.jpg">
+                           <div class="menu__paragraph">
+                              <h6 class="menu__item-name">Bircher muesli (VEgan)</h6>
+                              <p class="menu__item-presenting">
+                                 Bircher muesli with strawberries and cacao nibs
+                              </p>
+                           </div>
+                              <p class="menu__item-price">
+                                 $6.5
+                              </p>
+                        </li>
+                        <li class="menu__item">
+                           <img class="menu__item-photo" src="./images/menu__item3.jpg">
+                           <div class="menu__paragraph">
+                              <h6 class="menu__item-name">House Granola (Vegetarian, Glutten Free)</h6>
+                              <p class="menu__item-presenting">
+                                 Granola with jumbo oats and nuts served with Greek yoghurt and apricots
+                              </p>
+                           </div>
+                              <p class="menu__item-price">
+                                 $6.5
+                              </p>
+                        </li>
+                        <li class="menu__item">
+                           <img class="menu__item-photo" src="./images/menu__item4.jpg">
+                           <div class="menu__paragraph">
+                              <h6 class="menu__item-name">Prufrock benny</h6>
+                              <p class="menu__item-presenting">
+                                 Cackleberry Farm poached eggs, Red Brick espresso hollandaise on toast
+                              </p>
+                           </div>
+                              <p class="menu__item-price">
+                                 $10
+                              </p>
+                        </li>
+                        <li class="menu__item">
+                           <img class="menu__item-photo" src="./images/menu__item5.jpg">
+                           <div class="menu__paragraph">
+                              <h6 class="menu__item-name">Soup (Vegan on request)</h6>
+                              <p class="menu__item-presenting">
+                                 Gazpacho served with sourdough toast
+                              </p>
+                           </div>
+                              <p class="menu__item-price">
+                                 $6.5
+                              </p>
+                        </li>
+                        <li class="menu__item">
+                           <img class="menu__item-photo" src="./images/menu__item3.jpg">
+                           <div class="menu__paragraph">
+                              <h6 class="menu__item-name">Mushrooms (Vegan on request)</h6>
+                              <p class="menu__item-presenting">
+                                 Field mushrooms on toast with graceburn cheese and aioli
+                              </p>
+                           </div>
+                              <p class="menu__item-price">
+                                 $3.45
+                              </p>
+                        </li>
+                        <li class="menu__item">
+                           <img class="menu__item-photo" src="./images/menu__item5.jpg">
+                           <div class="menu__paragraph">
+                              <h6 class="menu__item-name">Tomatoes on toast</h6>
+                              <p class="menu__item-presenting">
+                                 Heirloom tomatoes with lovage pesto and chives on toasted sourdough
+                              </p>
+                           </div>
+                              <p class="menu__item-price">
+                                 $3.45
+                              </p>
+                        </li>
+                        <li class="menu__item">
+                           <img class="menu__item-photo" src="./images/menu__item1.jpg">
+                           <div class="menu__paragraph">
+                              <h6 class="menu__item-name">Fruit Toast</h6>
+                              <p class="menu__item-presenting">
+                                 Fruity rye toast served with Stichelton cheese and red plum
+                              </p>
+                           </div>
+                              <p class="menu__item-price">
+                                 $3.45
+                              </p>
+                        </li>
+                        <li class="menu__item">
+                           <img class="menu__item-photo" src="./images/menu__item2.jpg">
+                           <div class="menu__paragraph">
+                              <h6 class="menu__item-name">Eggs on toast</h6>
+                              <p class="menu__item-presenting">
+                                 Cackleberry eggs - poached, fried or scrambled on sourdough toast
+                              </p>
+                           </div>
+                              <p class="menu__item-price">
+                                 $3.45
+                              </p>
+                        </li>
+                        <li class="menu__item">
+                           <img class="menu__item-photo" src="./images/menu__item3.jpg">
+                           <div class="menu__paragraph">
+                              <h6 class="menu__item-name">Toast (Vegan on request)</h6>
+                              <p class="menu__item-presenting">
+                                 Sourdough toast with butter and blueberry and blackcurrant jam
+                              </p>
+                           </div>
+                              <p class="menu__item-price">
+                                 $3.45
+                              </p>
+                           </li>   
+                     </ul>
+                  </div>
+               </div>
+            </section>
+            <section class="testimonials">
+               <div class="testimonials__container">
+                  <div class="testimonials__info margin">
+                     <h2 class="testimonials__heading">Testimonials</h2>
+                     <div class="testimonials__underline"></div>
+                     <p class="testimonials__text">I had a cup of iced coffee, which was perfect size for me. Not too big. The cup is stylish with slim</p>
+                     <p class="testimonials__text">design. The iced coffee was perfect for a warm day like today.</p>
+                     <p class="testimonials__text">The cafe is clean and welcoming.</p>
+                     <p class="testimonials__author">Chiho Sharp, local expert</p>
+                     <div class="testimonials__switcher">
+   
+                     </div>
+                  </div>
+               </div>
+               </section> 
+               <section class="news">
+                  <div class="news__container">
+                     <div class="news__info margin">
+                        <h2 class="news__heading">News</h2>
+                        <div class="news__underline"></div>
+                        <p class="news__text">Stay updated on all the latest Coffee House products, events</p>
+                        <p class="news__text">& community news.</p>
+                        <div class="news__list-container">
+                           <ul class="news__list">
+                              <li class="news__item">
+                                 <img class="news__item-photo" src="./images/news__1.png">
+                                 <div class="news__item-info">
+                                    <h6 class="news__item-heading">Moka pot</h6>
+                                    <p class="news__item-text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal </p>
+                                    <a class="news__item-link">&mdash;&nbsp;Read more</a>
+                                 </div>
+                              </li>
+                              <li class="news__item">
+                                 <img class="news__item-photo" src="./images/news__2.png">
+                                 <div class="news__item-info">
+                                    <h6 class="news__item-heading">Women in Coffee - Women’s Collective</h6>
+                                    <p class="news__item-text">Our Quality Control Lead in Melbourne, Jane Doe, is instrumental in selecting single origin coffee for Coffe House Espresso.</p>
+                                    <a class="news__item-link">&mdash;&nbsp;Read more</a>
+                                 </div>
+                              </li>
+                              <li class="news__item">
+                                 <img class="news__item-photo" src="./images/news__3.png">
+                                 <div class="news__item-info">
+                                    <h6 class="news__item-heading">Coffee Roasters and Espresso Specialists - Our Story</h6>
+                                    <p class="news__item-text">Coffee House is built on relationships. Our success as a coffee roaster is down to the success of the people we choose to partner with – from our first café customer, to our staff around the world.</p>
+                                    <a class="news__item-link">&mdash;&nbsp;Read more</a>
+                                 </div>
+                              </li>
+                              
+                           </ul>
+   
+                        </div>
+                     </div>
+                     </div>
+               </section>  
          </main>
       </div>
    </body>
