--- a/index.html
+++ b/index.html
@@ -289,8 +289,59 @@
                         </div>
                      </div>
                      </div>
-               </section>  
+               </section> 
+               <section class="locations">
+                  <div class="locations__container">
+                     <div class="locations__info margin">
+                        <h2 class="locations__heading">Our locations</h2>
+                        <div class="locations__underline"></div>
+                        <p class="locations__text">Come drink a coffee with us</p>
+                        <p class="locations__text">on Fleet Street,  Chancery Lane or Milkwood Road!</p>
+                        <div class="locations__list">
+                           <div class="locations__item">
+                              <img class="locations__image" src="./images/location__1.jpg">
+                              <h5 class="locations__name">Fleet Street Press</h5>
+                              <p class="locations__opening-hours">Mon - Sun:  10:00 - 00:00</p>
+                              <p class="locations__address">3 Fleet Street, London EC4Y 1AU</p>
+                           </div>
+                           <div class="locations__item">
+                              <img class="locations__image" src="./images/location__2.jpg">
+                              <h5 class="locations__name">Chancery Press</h5>
+                              <p class="locations__opening-hours">Mon - Sun:  10:00 - 00:00</p>
+                              <p class="locations__address">81 Chancery Lane, London WC2A 1DD</p>
+                           </div>
+                           <div class="locations__item">
+                              <img class="locations__image" src="./images/location__3.jpg">
+                              <h5 class="locations__name">SHOREDITCH</h5>
+                              <p class="locations__opening-hours">Mon - Sun:  10:00 - 00:00</p>
+                              <p class="locations__address">Unit 15, Stone Trading Estate
+                                 Milkwood Road, Herne Hill
+                                 SE24 0JU</p>
+                           </div>
+                        </div>
+                     </div>
+                     </div>
+               </section> 
+               <section class="newsletter">
+                  <div class="newsletter__container">
+                     <div class="newsletter__info">
+                        <h2 class="newsletter__heading">Our newsletter</h2>
+                        <div class="newsletter__underline"></div>
+                        <p class="newsletter__text">Available all day! We can not guarantee our foods are allergen-</p>
+                        <p class="newsletter__text">free. Service charge not included.</p>
+                        <div class="newsletter__form-container">
+                           <form class="newsletter__form">
+                              <input class="newsletter__input" type="email" placeholder="Your E-mail Adress...">
+                              <button class="newsletter__button_type_subscribe" type="submit">subscribe</button>
+                           </form>
+                        </div>
+                     </div>
+                  </div>
+               </section>
          </main>
+         <footer class="footer">
+
+         </footer>
       </div>
    </body>
 </html>
